feat(content): 重构B站内容脚本，支持多页面配置和动态过滤
- 新增utils/dom.ts工具函数waitForSelector用于等待元素出现
- 重构content.ts为模块化配置方式，支持多种B站页面类型
- 实现动态模糊过滤功能，根据存储条件自动更新
- 优化清理逻辑，确保资源释放和性能
- 更新package.json项目名称和描述

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "wxt-vue-starter",
-    "description": "manifest.json description",
+    "name": "bili-filter",
+    "description": "B站过滤插件，隐藏标题和作者，简洁清爽",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "type": "module",
     "scripts": {
         "dev": "wxt",
