docs: 更新插件描述和名称以更准确反映功能
修改package.json中的描述和wxt.config.ts中的插件名称，使其更准确地反映插件通过关键词过滤B站视频的功能

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bili-filter",
-    "description": "B站过滤插件，隐藏标题和作者，简洁清爽",
+    "description": "B站过滤插件，通过关键词过滤B站视频",
     "private": true,
     "version": "1.0.0",
     "type": "module",
