feat: 添加通配符匹配功能并优化搜索页面支持
- 新增 matcher 依赖用于通配符匹配
- 在 DynamicTags 组件中添加通配符输入支持
- 添加 Tip 组件展示通配符使用说明
- 优化搜索页面选择器以支持不同搜索类型
- 使用通配符匹配规则替代简单包含匹配
- 更新版本号至 1.2.0

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "bili-filter",
     "description": "B站过滤插件，通过关键词过滤B站视频",
     "private": true,
-    "version": "1.1.0",
+    "version": "1.2.0",
     "type": "module",
     "scripts": {
         "dev": "wxt",
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "element-plus": "^2.11.5",
+        "matcher": "^6.0.0",
         "vue": "^3.5.22"
     },
     "devDependencies": {
