--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.5.22"
     },
     "devDependencies": {
+        "@wxt-dev/auto-icons": "^1.1.0",
         "@wxt-dev/module-vue": "^1.0.3",
         "sass-embedded": "^1.93.2",
         "typescript": "^5.9.3",
